--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MilaPizza Memuno - ¡Pedí Online!</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
+
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 
@@ -52,7 +58,7 @@
             <ol>
                 <li><strong>Explorá:</strong> Navegá por nuestro menú y elegí tus Milapizzas y adicionales favoritos.</li>
                 <li><strong>Agregá:</strong> Hacé clic en "Agregar" en cada producto que quieras.</li>
-                <li><strong>Revisá:</strong> Andá a la sección "Tu Pedido" para ver tu selección.</li>
+                <li><strong>Revisá:</strong> Andá a la sección "Tu Pedido" para ver tu selección y ajustar cantidades.</li>
                 <li><strong>Completá:</strong> Llená tus datos de contacto y entrega.</li>
                 <li><strong>Enviá:</strong> Hacé clic en "Enviar Pedido por WhatsApp".</li>
                 <li><strong>Confirmá:</strong> Recibirás en breve el valor total de tu compra con un link de pago (Mercado Pago / Billeteras Virtuales).</li>
@@ -95,8 +101,7 @@
         <p>Contacto WhatsApp: +54 9 11 6578-5945</p>
     </footer>
 
-    <script src="js/menu-data.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/menu-data.js" defer></script>
+    <script src="js/script.js" defer></script>
 </body>
-
 </html>
