--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <section id="hero">
             <div class="hero-content">
-                <img src="opc 2.jpg" alt="Nuestra Milapizza Estrella" style="width: 80%; max-width: 400px; border-radius: 10px; margin-bottom: 20px;">
+                <img src="opc 2.jpg" alt="Nuestra Milapizza Estrella" id="hero-image">
                 <h1>¡Las Milapizzas que te vuelan la cabeza!</h1>
                 <p>Milanesa, queso derretido y papas crujientes. ¡Probá la tuya!</p>
                 <a href="#menu" class="cta-button">Ver Menú</a>
