--- a/index.html
+++ b/index.html
@@ -52,12 +52,9 @@
         <section id="como-pedir">
             <h2>¿Cómo Pedir? ¡Es Fácil!</h2>
             <ol>
-                <li><strong>Explorá:</strong> Navegá por nuestro menú y elegí tus Milapizzas y adicionales favoritos.</li>
-                <li><strong>Agregá:</strong> Hacé clic en "Agregar" en cada producto que quieras.</li>
-                <li><strong>Revisá:</strong> Andá a la sección "Tu Pedido" para ver tu selección y ajustar cantidades.</li>
-                <li><strong>Completá:</strong> Llená tus datos de contacto y entrega.</li>
-                <li><strong>Enviá:</strong> Hacé clic en "Enviar Pedido por WhatsApp".</li>
-                <li><strong>Confirmá:</strong> Recibirás en breve el valor total de tu compra con un link de pago (Mercado Pago / Billeteras Virtuales).</li>
+                <li><strong>Elegí y Agregá:</strong> Explorá nuestro menú, seleccioná tus Milapizzas y hacé clic en "Agregar" para sumarlas a tu carrito.</li>
+                <li><strong>Revisá y Enviá:</strong> Andá a "Tu Pedido", ajustá las cantidades, completá tus datos y envianos tu orden por WhatsApp.</li>
+                <li><strong>Confirmá y Pagá:</strong> ¡Listo! Recibirás el total y el link de pago por WhatsApp para finalizar tu compra.</li>
             </ol>
             <p><strong>Horarios:</strong> Viernes, Sábado y Domingo de 20:00 a 00:00 hs.</p>
         </section>
